style : 라인수정
-security config, 전체 포스트 조회url 전역 접근 가능하도록 수정